fixes slider overflow

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -258,9 +258,10 @@ img[lazy="loaded"]
               margin-left: 144px
           .slider-Container
             z-index: 100
+            height: 62.5vw
+            max-height: 900px
             .image-Slider
-              height: 62.5vw
-              max-height: 900px
+              height: 100%
               z-index: 100
             img, video
               position: absolute
